app/assets/stylesheets/business_show.css
/* ... */
.business-show-signup{
    width: 100%;
    text-decoration: none;
    color: #000;
    padding: 12px;
    line-height: 37px;
    font-size: 13px;
    font-family: "Helvetica Neue";
}

.business-show-search-button {
    width: 54px;
    height: 36px;
    margin-left: -25px;
    background: #d32323;
    border: 1px solid #bd1f1f;
    cursor: pointer;
    border-radius: 3px;
}

.search-button-business-show {
    vertical-align: middle;
    width: 100%;
    height: 100%;
    background: #BD1F1F;
    border: 1px solid #bd1f1f;
    border-radius: 3px;
}

.business-show-search-image{
    width: 100%;
    height: 100%;
    background-image: url(https://i.imgur.com/6nfeJt3.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size:50%;
}

.business-show-search-left .searchbar-left-inside {
    width: 321px;
    height: 36px;
    margin: 0 auto;
    
}

.business-show-search-left .searchbar-left-inside .find-searchbar-left {
    font-size: 14px;
}

.business-show-search-right .searchbar-right-inside .near-searchbar-right {
    font-size: 14px;
}

.business-show-search-right .searchbar-right-inside {
    width: 321px;
    height: 36px;
    margin: 0px 5px;
}

.business-show-search-left .searchbar-left-inside .business-search {
    width: 328px;
    height: 36px;
    margin-left: 5px;
    font-size: 14px;
}
.business-show-search-right .searchbar-right-inside .location-search {
    width: 325px;
    height: 36px;
    font-size: 14px;
}

.categories-main-header {
    position: relative;
    background: #fafafa;
    font-size: 100%;
    font: inherit;
    border-bottom: 1px solid #e6e6e6;
    border-color: #e6e6e6;
}

.business-show-categories-container{
    width: 990px;
    height: 40px;
    display: flex;
    justify-content: center;
    margin: 0 auto;
    border-spacing: 18px 0;
    border-collapse: separate;
    display: flex;
    justify-content: center;
}

.ul-categories-business-show {
    display: flex;
    justify-content: space-evenly;
    color: #333333;
    font-size: 14px;
    font-family:"Helvetica Neue";
    font-weight: 500;
    
}

.categories-restaurants {
    width: 157px;
    height: 40px;
    border: 1px solid #e6e6e6;
}

.ul-categories-business-show li {
    text-align: center;
    border: 1px solid #e6e6e6;
}

.ul-categories-business-show span {
    line-height: 41.5px;
}
.categories-home-services {
    width: 175px;
    height: 40px;
    
}

.categories-auto-services {
    width: 168px;
    height: 40px;
    
}

.categories-more {
    width: 91px;
    height: 40px;
    
}

.categories-separator {
    width: 50px;
    height: 40px;
    
}

.categories-review {
    width: 150px;
    height: 40px;
    
}

.categories-business {
    width: 148px;
    height: 40px;
    
}

.business-main-content-container{
    min-width: 990px;
    overflow: hidden;
    z-index: 1px;
    padding-bottom: 24px; 
    margin-bottom: -18px;
    background: #f5f5f5;
}

.business-content-container {
    width: 960px;
    margin: 0 auto;
    
    padding: 30px 15px;
    
}

.actual-business-header {
    width: 960px;
    height: 112px;
    color: #333333;
    font-size: 16px;
    font-family: "Helvetica Neue";
    display: flex;
    
    
}

.business-name-header {
    width: 555px;
    height: 112px;
    padding: 0px 30px 0px 0xp;
}

.business-name {
    width: 525px;
    height: 42px;
    font-size: 30px;
    font-weight: bold;
}

.business-ratings {
    width: 525px;
    height: 24px;
}

.business-review-header {
    width: 405px;
    height: 37px;
    line-height: 84px;
    padding-left: 30px;
    padding-top: 18px;
    
    
}

.business-review-header button {
    font-family: "Helvetica Neue";
    font-weight: bold;
    
    
}

.write-a-review-button {
    background: #d32323;
    color: white;
    border-radius: 3px;
    width: 159.27px;
    height: 36px;
    font-size: 14px;
    font-weight: 600;
    margin-right: 30px;
    
   
}

.add-photo-button {
    width: 99.56px;
    height: 30.91px;
    color: #666666;
    background: #ffffff;
    font-size: 12px;
    border-radius: 4px 0px 0px 4px;
    
}

.share-photo-button {
    width: 70.48px;
    height: 30.91px;
    font-size: 12px;
    border-radius: 1px;
}


.save-button {
    width: 63.14;
    height: 30.91px;
    font-size: 12px;
    border-radius: 0px 4px 4px 0px;
}

.social-links{
    text-decoration: none;
    color: #666666;
}

.business-show-sub-header {
    width: 960px;
    height: 333px;
    display: flex;
    
}

.business-show-map {
    width: 300px;
    height: 315px;
    background: #FFFFFF;
    padding: 5px;
    bordeR: 1px solid #ccc;
}

.business-pictures-container {
    width: 660px;
    height: 333px;
}

.business-pictures-showcase {
    width: 660px;
    height: 220px;
    padding-top: 50px;
}

.ul-images {
    width: 660px;
    height: 220px;
    display: flex;
}

/* .ul-images li {
    width: 220px;
    height: 220px;
    overflow: hidden;
   
} */



.ul-images li:hover {
    width: 250px;
    /* height: 250px; */
    height: 250px;
    cursor: pointer;
    transition-delay: .3s;
    /* -webkit-transition-delay: transform 2s; */
}

.ul-images img {
    height: 220px;
    /* background-size: 100%;
    background-repeat: none;
    background-position: center; */
}



/* .ul-images li:nth-of-type(even){
    width: 250px;
    height: 250px;
    overflow: visible;
        margin-top: -14.5px;

}

.image:nth-of-type(odd){
    width: 250px;
    height: 250px;
}

.ul-images li:nth-of-type(odd){
    width: 220px;
    height: 220px;
    overflow: hidden;
}

.image:nth-of-type(even){
    width: 220px;
    height: 220px;
} */

.ul-images li:nth-of-type(odd) .image{
    width: 220px;
    height: 220px;
    overflow: visible;
    margin-top: -14.5px;
}
.ul-images li:nth-of-type(odd) .image:hover{
    width: 250px;
    height: 250px;
    overflow: visible;
    /* position: relative; */
    z-index: 10;
    margin-top: -14.5px;
    transition-delay: .3s;
}
/* ... */

